# tri-checkers

./: CMakeLists.txt  LICENSE  README.md
assets/: pause.xcf  slider.xcf  tile_piece.xcf
assets/shaders/: default.vert  shadow.frag  test.hlsl
include/: board.hpp  camera.hpp  game.hpp  gui.hpp  piece.hpp  settings.hpp  textures.hpp  tile.hpp  tile_select.hpp
src/: board.cpp  camera.cpp  game.cpp  gui.cpp  main.cpp  tile.cpp  tile_select.cpp
